# duckdb-quickjs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: lua_extension.cpp  quickjs_extension.cpp
src/include/: lua_extension.hpp  quickjs_extension.hpp
test/sql/: lua.test  quickjs.test
